# industry-news-aggregator

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml  skill.md
.github/workflows/: daily-news.yml
src/: __init__.py  config.py  issues.py  main.py  models.py  notifier.py  utils.py
src/collectors/: __init__.py  api_collector.py  base.py  detector.py  registry.py  rss_collector.py  web_collector.py  wechat_collector.py
src/filters/: __init__.py  dedup.py  engine.py  keyword_filter.py  ranker.py
src/pushers/: __init__.py  base.py  email_pusher.py  feishu_pusher.py  local_pusher.py  templates.py
