[project]
name = "industry-news-aggregator"
version = "1.0.0"
description = "行业新闻聚合推送器 - 自动收集、筛选、推送行业资讯"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.10",
    "trafilatura>=1.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "lark-oapi>=1.4.0",
    "python-dateutil>=2.8.0",
    "rapidfuzz>=3.6.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
news-aggregator = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
